# ndlife-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  life.rs
tests/: shapes.rs
